# hyprland-plugins

./: hyprpm.toml
wobblyjelly/: CMakeLists.txt  main.cpp
